--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@100;400;600&display=swap');
+@import url('./assets/fonts/helvetica/style.css');
 
 *{
   margin: 0px;
